# byte-search

./: Cargo.toml  README.md
benches/: byte_search.rs
examples/: message_sync.rs
src/: lib.rs
